@@ -38,8 +38,8 @@ endif
 noinst_DATA = .scm-links
 
 ## This is unused and therefore no longer installed and/or loaded
-# gncscmmoddir = ${GNC_SHAREDIR}/guile-modules/gnucash/report/locale-specific
-# gncscmmod_DATA = us.scm
+gncscmmoddir = ${GNC_SHAREDIR}/guile-modules/gnucash/report/locale-specific
+gncscmmod_DATA = us.scm de_DE.scm
 
 gncscmothermoddir = ${GNC_SHAREDIR}/guile-modules/gnucash/report/
 gncscmothermod_DATA = taxtxf.scm taxtxf-de_DE.scm
