@@ -1,0 +1,3 @@
+; This is unused and therefore no longer installed and/or loaded
+(define-module (gnucash report locale-specific de_DE))
+(use-modules (gnucash report taxtxf-de_DE))  
